@@ -134,8 +134,10 @@ public class DirectOutputServletConfigImpl extends ServletManagerConfigImpl impl
                 digester,
                 CONFIG_NS,
                 CUS_NS,
-                new String[] { "/directoutputserver/directoutputservletinfo",
-                        "directoutputserver/directoutputpagerequest/properties" });
+                new String[] { 
+                        "/directoutputserver/directoutputservletinfo",
+                        "/directoutputserver/directoutputpagerequest/properties",
+                        "/directoutputserver/properties" });
         
         String confDocXml = null;
         config.loadTime = System.currentTimeMillis();
