@@ -1,3 +1,9 @@
+2007-06-27  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixxml/config/impl/DirectOutputServletConfigImpl.java: fixed property
+	customization problem, added support for customizable global and pagerequest 
+	properties (incomplete CustomizationHandler initialization)
+
 2007-06-21  Martin Leidig  <mleidig@schlund.de>
 
 	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java: include __frame 
